[gd_scene load_steps=5 format=3 uid="uid://cs48tfm0iy8v3"]

[ext_resource type="Theme" uid="uid://b3rhwjl7yw6lu" path="res://Themes/Info/Info_main.tres" id="1_j3jit"]
[ext_resource type="Script" path="res://Scripts/Service/UsersInfoService.gd" id="2_n0saf"]
[ext_resource type="Theme" uid="uid://ckkpkqulicu7v" path="res://Themes/Info/title.tres" id="2_qcqej"]
[ext_resource type="Theme" uid="uid://j3yy82x32yij" path="res://Themes/Info/for_icons_and_state.tres" id="7_lt1xe"]

[node name="Users_info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_lt1xe")
script = ExtResource("2_n0saf")

[node name="Table" type="ScrollContainer" parent="."]
layout_mode = 2
offset_top = 80.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 3

[node name="Users_info_lines" type="VBoxContainer" parent="Table"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
offset_right = 1920.0
offset_bottom = 80.0
theme = ExtResource("2_qcqej")

[node name="Space" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme = ExtResource("1_j3jit")

[node name="Icon" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
theme = ExtResource("2_qcqej")
text = "ИКОНКА"
horizontal_alignment = 1

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Icon"]
layout_mode = 0
offset_top = 21.0
offset_right = 27.0
offset_bottom = 67.0
theme = ExtResource("1_j3jit")

[node name="Space2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("1_j3jit")

[node name="Split0" type="HSplitContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_j3jit")

[node name="Name" type="HFlowContainer" parent="HBoxContainer/Split0"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme = ExtResource("1_j3jit")

[node name="Name" type="Label" parent="HBoxContainer/Split0/Name"]
custom_minimum_size = Vector2(260, 51)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_qcqej")
text = "ФИО"
vertical_alignment = 2

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Split0/Name/Name"]
layout_mode = 0
offset_left = -30.0
offset_top = 51.0
offset_right = -10.0
offset_bottom = 96.0
theme = ExtResource("1_j3jit")

[node name="Connection2" type="PanelContainer" parent="HBoxContainer/Split0/Name/Name"]
layout_mode = 0
offset_left = -30.0
offset_top = 49.0
offset_bottom = 51.0
theme = ExtResource("1_j3jit")

[node name="Split1" type="HSplitContainer" parent="HBoxContainer/Split0"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_j3jit")

[node name="Login" type="HFlowContainer" parent="HBoxContainer/Split0/Split1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_j3jit")

[node name="Login" type="Label" parent="HBoxContainer/Split0/Split1/Login"]
custom_minimum_size = Vector2(150, 51)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_qcqej")
text = "ЛОГИН"
vertical_alignment = 2

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Split0/Split1/Login/Login"]
layout_mode = 0
offset_left = -30.0
offset_top = 51.0
offset_right = -10.0
offset_bottom = 96.0
theme = ExtResource("1_j3jit")

[node name="Connection2" type="PanelContainer" parent="HBoxContainer/Split0/Split1/Login/Login"]
layout_mode = 0
offset_left = -30.0
offset_top = 49.0
offset_bottom = 51.0
theme = ExtResource("1_j3jit")

[node name="Split2" type="HSplitContainer" parent="HBoxContainer/Split0/Split1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_j3jit")

[node name="Role" type="HFlowContainer" parent="HBoxContainer/Split0/Split1/Split2"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_j3jit")

[node name="Role" type="Label" parent="HBoxContainer/Split0/Split1/Split2/Role"]
custom_minimum_size = Vector2(260, 51)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_qcqej")
text = "РОЛЬ"
vertical_alignment = 2

[node name="Connection" type="PanelContainer" parent="HBoxContainer/Split0/Split1/Split2/Role/Role"]
layout_mode = 0
offset_left = -30.0
offset_top = 51.0
offset_right = -10.0
offset_bottom = 96.0
theme = ExtResource("1_j3jit")

[node name="Connection2" type="PanelContainer" parent="HBoxContainer/Split0/Split1/Split2/Role/Role"]
layout_mode = 0
offset_left = -30.0
offset_top = 49.0
offset_bottom = 51.0
theme = ExtResource("1_j3jit")

[connection signal="sort_children" from="HBoxContainer/Split0" to="." method="_on_split_0_sort_children"]
[connection signal="sort_children" from="HBoxContainer/Split0/Split1" to="." method="_on_split_0_sort_children"]
[connection signal="sort_children" from="HBoxContainer/Split0/Split1/Split2" to="." method="_on_split_0_sort_children"]
